# gzz

./: .gitmodules  CMakeLists.txt  README.md
shaders/: batch_renderer_fragment.glsl  batch_renderer_vertex.glsl  fragment.glsl  vertex.glsl
src/: CMakeLists.txt  batch.c  batch.h  batch_renderer.c  batch_renderer.h  common.h  log.c  log.h  main.c  shader.c  shader.h  sprite.h  texture2d.c  texture2d.h  texture_region.h
